Fixed bentogrid not centered, responsive, and I think is ready to use

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -9,14 +9,14 @@
   list-style-type: none;
   &:focus {appearance: none; border: none;}
 }
-body {min-height: 100dvh; display: flex; justify-content: center;}
+body {min-height: 100dvh; display: flex; justify-content: center; flex-direction: column;}
 a {cursor: pointer; color: inherit;}
 /* NORMALIZE -----------------------------------*/
 
-/* HEADER -----------------------------------*/
+/* OUTSIDE -----------------------------------*/
 header {
   position: relative;
-  width: 100svw;
+  width: 100%;
   display: flex;
   padding: 20px;
   place-items: center;
@@ -35,14 +35,15 @@ header {
     >li {display: flex; gap: 40px;}
   }
 }
-/* HEADER -----------------------------------*/
+
+.Bottom {text-align: center; padding: 20px;}
+/* OUTSIDE -----------------------------------*/
 
 /* BENTO -----------------------------------*/
 .BentoGrid {
   /*Grid*/
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(auto, 1fr);
   grid-auto-flow: row dense;
   /*Design*/
   border-radius: 20px;
@@ -55,7 +56,6 @@ header {
   /*Grid*/
   overflow: hidden;
   display: grid;
-
   /*Design*/
   border-radius: 10px;
   transition: 0.2s;
@@ -103,10 +103,12 @@ header {
 /* TEXT POSITION -----------------------------------*/
 
 /* RESPONSIVE -----------------------------------*/
-@media (width > 768px) {
-  .BentoGrid {grid-template-columns: repeat(8, 1fr);}
+@media (width > 770px) {
+  .BentoGrid {grid-template-columns: repeat(8, 1fr); margin: 0 40px 40px;} 
   .Nav {top: auto;}
 }
-/* RESPONSIVE -----------------------------------*/
 
-.Bottom {text-align: center; padding: 20px;}
+@media (width > 1100px) {
+  .BentoGrid {margin: 0 auto 40px; max-width:1000px;} 
+}
+/* RESPONSIVE -----------------------------------*/
